Update of the documentation for the widget configuration Creation of the bookmarklet code Fix of too long strings for the widgets

--- a/src/war/css/widget.css
+++ b/src/war/css/widget.css
@@ -127,7 +127,7 @@ body, th, td, textarea {
     padding: 10px 0 10px 0;
 }
 
-.form input, .comment input {
+.form input, .form .dijitSelect, .form .dijitButtonText, .form .dijitTextBox, .comment input {
     color: black;
 }
 
